--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-src/inhunmanDexBot.session
+src/inhumanDexbot.session
 src/inhunmanDexBot.session-journal
+*.session*
