--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-    "name": "Hexa Pokedex 2.0",
-    "description": "Hexa Pokedex 2.0 is a bot which acts as a helper for trainers on Telegram. You can check information of Pokemon, Showdown usage and organize Raids as quickly as possible, without ever leaving the app",
+    "name": "Hexa-Pokedex-2.0",
+    "description": "Rotom-2.0 is a actually a bot developed by @Warning_MadBoy_is_Here on basis of @RotomgramBot, which acts as a helper for trainers on Telegram. You can check information of Pokémon, Showdown usage and check effectiveness; weakness of Pokémon types as quickly as possible, without ever leaving the app",
     "keywords": [
-      "Hexa Pokedex 2.0"
+      "Hexa-Pokedex-2.0"
     ],
-    "repository": "https://github.com/Techno212/inhumanDexbot",
+    "repository": "https://github.com/Techno212/Hexa-Pokedex-2.0",
     "env": {
       "BOT_TOKEN": {
         "description": "Put your bot token."
@@ -16,7 +16,7 @@
         "description": "Put your api_hash."
       },
       "SUDO": {
-        "description": "Put here list of id's -  (not usernames) for users.",
+        "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and don't know what is this, then keep the current IDs here at they are and add yours..",
         "value": "1097093376"
       }
     },
