--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
     "name": "Rotom-2.0",
-    "description": "Rotom-2.0 is a actually a bot developed by @Warning_MadBoy_is_Here on basis of @RotomgramBot, which acts as a helper for trainers on Telegram. You can check information of Pokémon, Showdown usage and check effectiveness; weakness of Pokémon types as quickly as possible, without ever leaving the app",
+    "description": "Rotom-2.0 is a actually a bot developed by @ApexPredator_Leo on basis of @RotomgramBot, which acts as a helper for trainers on Telegram. You can check information of Pokémon, Showdown usage and check effectiveness; weakness of Pokémon types as quickly as possible, without ever leaving the app",
     "keywords": [
       "Rotom-2.0"
     ],
-    "repository": "https://github.com/madboy482/rotom-2.0",
+    "repository": "https://github.com/legendredyt/rotom-2.0",
     "env": {
       "BOT_TOKEN": {
         "description": "Put your bot token."
@@ -17,7 +17,7 @@
       },
       "SUDO": {
         "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and don't know what is this, then keep the current IDs here at they are and add yours..",
-        "value": "1078841825 1107922726"
+        "value": "1047592747"
       }
     },
     "addons": [],
